# diffusion2D

./: output.py  setup.cfg  test.py
diffusion2d_packages/: diffusion2d.py
nagannhh_packages.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
