[metadata]
name = nagannhh_packages
version = 0.0.1
author = nagannhh
url = https://github.com/harshithn31/diffusion2D
description = A package to solve 2D diffusion equation test exercise

[options]
packages = find:
install_requires =
  numpy>=2.1.3
  matplotlib>=3.9.2
  setuptools>=75.5.0

[options.entry_points]
console_scripts =
  diffusion2d-solve = diffusion2d_packages.diffusion2d:solve